tests/fixtures/errors/invalid_preproc_conditional_order.puml
@startuml
!if 1
A -> B: one
!else
A -> B: two
!elseif 1
A -> B: three
!endif
@enduml
